# owlChrpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compilation_errors.txt  main.cpp  owl.cpp  owlFunctional.chrpp  owlrules.chrpp  owlrules.hpp  owlrules.hpp.old  owlrulesOWL2.cpp  owlrulesOWL2.hh  sortie
examples/: example1.ofn
examples/json/: age_constraint.json
examples/ofn/: ODRL20.ofn  UniversityOntology.ofn  age_constraint.ofn  age_constraint2.ofn  example-1.ofn  test.ofn
examples/owl/: UniversityOntology.owl
include/: chr_traits.h  constants.h  parsercowl.h  types.h  utils.h
